--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,8 +1,7 @@
-//colors
-
-     
+//colors 
     $off-black: #20222b;
     $off-white: #a5afd7;
+    $dark-blue: #333745;
 //spacing
     $m-size: 1.6rem;
     $l-size: 3.2rem;
