--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,7 +1,9 @@
 //colors 
     $off-black: #20222b;
-    $off-white: #a5afd7;
     $dark-blue: #333745;
+    $blue: #3c4251;
+    $light-blue: #464b5e;
+    $off-white: #a5afd7;
     $purple: #8357c5;
 //spacing
     $s-size:1.2rem;
